fix: text align center for contest table

--- a/src/public/assets/css/global.css
+++ b/src/public/assets/css/global.css
@@ -135,6 +135,10 @@ td {
 	text-align: center;
 }
 
+#contest-list {
+	text-align: center;
+}
+
 .score--wrong-answer {
 	color: #ff0000;
 }
